# authcore-openfga-operator

./: .dockerignore  .gitignore  ALPHA_USAGE.md  CACHE_FALLBACK.md  CHAINGUARD-MIGRATION.md  CONFLICT_RESOLUTION.md  CONTRIBUTING.md  Cargo.toml  DEMOS.md  DEMO_QUICKSTART.md  DISTROLESS-MIGRATION.md  DOCKER_BUILD_OPTIMIZATION.md  Dockerfile  Dockerfile.test  Makefile  OPTIMIZATION_SUMMARY.md  PODMAN.md  README.md  SCCACHE_FALLBACK_FIX.md  SECURITY.md  WORKFLOW_OPTIMIZATION.md  alpha-release-verification.sh  docker-compose.yml  go.mod  go.sum  init.sh  main.go
.github/ISSUE_TEMPLATE/: openfga_mvp_template.md
.github/workflows/: build-and-publish.yml  ci.yml
api/v1alpha1/: authorizationmodel_types.go  groupversion_info.go  openfgaserver_types.go  openfgastore_types.go  zz_generated.deepcopy.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml
config/samples/: complete-deployment-example.yaml  openfga_v1alpha1_authorizationmodel.yaml  openfga_v1alpha1_openfgaserver.yaml  openfga_v1alpha1_openfgastore.yaml
demos/: README.md
demos/banking-app/: .env.example  .gitignore  Dockerfile  README.md  authorization-model.json  banking_demo.rs  openfga-setup.md  package-lock.json  (+2 more)
docs/: CONTAINER-SECURITY.md  CONTAINER_RUNTIME_SUPPORT.md  LOGGING.md  VERSION_CONSISTENCY.md  crds.md  registry-integration.md  shell-compatibility-fix.md
examples/: basic-openfga.yaml  distroless-operator-deployment.yaml  enterprise-openfga.yaml  postgres-openfga-vault.yaml  postgres-openfga.yaml  production-openfga.yaml
issues/: Enterprise_SSO_Feature.md
kustomize/: README.md
scripts/: README.md  deploy-banking-demo.sh  deploy-demos.ps1  deploy-demos.sh  deploy-genai-demo.sh  deploy-minikube-vault.sh  init-vault.sh  manage-vault-secrets.sh  simple-validation-test.sh  test-deploy-script-shell-compatibility.sh  test-deployment-functions.sh  test-minikube-build.sh  test-podman-build.sh  test-shell-compatibility.sh
src/: controller.rs  crd.rs  main.rs  telemetry.rs  types.rs
tests/: logging_tests.rs
(+147 files in other folders)
