[package]
name = "openfga-operator"
version = "0.1.0"
edition = "2021"
description = "Kubernetes operator for OpenFGA authorization service"
license = "Apache-2.0"
repository = "https://github.com/jralmaraz/Openfga-operator"

[dependencies]
# Kubernetes operator framework
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
schemars = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for external API calls
reqwest = { version = "0.11", features = ["json"] }

# Utilities
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
