[package]
name = "openfga-operator"
version = "0.1.0"
edition = "2021"
authors = ["OpenFGA Team"]
description = "Kubernetes operator for OpenFGA"
license = "Apache-2.0"

[dependencies]
kube = { version = "0.87", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
